# sideinstaller

./: .gitignore  README.md  cmd  cmd2.sh  package.json
AOSKit LinkingAttempt/: .gitignore  Cargo.toml  build.rs
AOSKit LinkingAttempt/src/: aoskit.m  sample.h
AppleIDAuth/AOSKit/AOSKit/: main.m
AppleIDAuth/AOSKit/AOSKit.xcodeproj/: project.pbxproj
AppleIDAuth/AOSKit/AOSKit/old/: AKAnisetteData.h  AKDevice.h  AOSUtilities.h
Other/: aoskit.m
Other/AppleIDAuth/AOSKit/AOSKit/: AKURLBag.h  NativeAnisetteService.h  main.m
Other/AppleIDAuth/AOSKit/AOSKit.xcodeproj/: project.pbxproj
Other/AppleIDAuth/AOSKit/AOSKit/old/: AKAppleIDSession.h
Other/TBD FIles/: AOSKitIOS.tbd  AuthKitIOS.tbd
Other/old/: aoskit.h  build.old2.rs  build.old3.rs  oldrs.txt  sample.m.txt
Tauri Demo/: .gitignore  package.json  tailwind.config.cjs
Tauri Demo/.github/workflows/: build.yml
Tauri Demo/src/: index.html  style.css
Tauri Demo/src-tauri/: AOSKit  Cargo.toml  tauri.conf.json
Tauri Demo/src-tauri/src/: main.rs
TauriApp/: .gitignore  package.json
TauriApp/src-tauri/: tauri.conf.json
anisette-kit/: Cargo.toml  build.rs
anisette-kit/src/: aoshelper.m  lib.rs
tauri-app/: package.json
tauri-app/src/: index.html  main.js  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/other_old/: authenticate.js  authenticate_lsrp.js  authenticate_srp2.js
tauri-app/src/scripts/: anisette.js  authenticate.js  authenticate3.js  authenticate_srp3.js  background.js  device.js  helpers.js  state.js  templates.js  wizard.js
tauri-app/src/scripts/srp/: srp.d.ts  srp.js
tauri-app/src/scripts/steps/: deviceSelection.js  loginStep.js
