[package]
name = "sideinst2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["http-all", "os-all", "shell-open", "window-close", "window-minimize", "window-start-dragging"] }
rusty_libimobiledevice = { version = "0.1.7", features = ["static", "vendored"] }
anisette_kit = { path = "../../anisette-kit" }
srp = "0.6.0"
sha2 = "0.10.6"
pbkdf2 = "0.11.0"
reqwest = {version = "0.11.13", features= ["blocking", "json"] }
rand_core = "0.6.4"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
